@@ -19,6 +19,11 @@ Version
 - T2-MI PID's and PLP's are now included in the report from tsanalyze and the
   plugin analyze.
 
+- Improved robustness of DVB tuner detection on Windows. It solves some issues
+  with 32-bit tuner filters on 64-bit systems. But older systems, before
+  Windows 7 (XP, Vista, etc.), may no longer work. No support will be provided
+  for pre-7 Windows systems.
+
 - Added --test option to tslsdvb on Windows.
 
 Version 3.3-20170930
